# nightwatch

./: .biomeignore  .env.example  .env.production  .firebaserc  .gitignore  .npmrc  .vercelignore  CHANGELOG.md  FULLSCREEN_OPTIMIZATION.md  README.md  biome.json  capacitor.config.ts  eslint.config.mjs  firebase.json  firestore.indexes.json  fix_modal.py  fix_modal_re.py  frontend_tests.txt  full-test-results.txt  next.config.ts  out.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  sentry.edge.config.ts  sentry.server.config.ts  serwist.config.js  t.logs  test-mermaid-parse.js  test-mermaid.js  test-mermaid.mjs  test-playwright.mjs  test-puppeteer.js  test-res.txt  test-results.txt  tsconfig.json  update.json  (+2 more)
.husky/: pre-commit
.playwright-mcp/: page-2026-06-22T22-17-25-475Z.yml  page-2026-06-22T22-18-01-110Z.yml  page-2026-06-22T22-19-02-428Z.yml  page-2026-06-22T22-38-40-247Z.yml
.vercel/: project.json
android/: build.gradle  capacitor.settings.gradle  variables.gradle
docker/: Dockerfile.staging
docs/: AGORA_RTM_RTC.md  API_LAYER.md  ARCHITECTURE.md  CONTRIBUTING.md  DESKTOP.md  FEATURES.md  I18N.md  README.md  (+16 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: discord.rs  live_bridge.rs  mod.rs  offline_media.rs  tray.rs  window.rs
src-tauri/src/commands/downloads/: cipher.rs  commands.rs  hls.rs  mod.rs  mp4.rs  progress.rs  state.rs  types.rs  vault.rs
(+1382 files in other folders)
