[package]
name = "watch-rudra"
version = "0.1.0"
edition = "2021"

[lib]
name = "watch_rudra_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
aes = "0.8"
ctr = "0.9"
log = "0.4"
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
futures-util = "0.3"
http = "1"
tauri-plugin-opener = "2.5.3"

# Desktop-only dependencies
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
fs2 = "0.4"
